--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header" style="background: linear-gradient(135deg, rgba(94, 47, 13, 0.7) 0%, rgba(230, 138, 0, 0.7) 100%), url('https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
         <div class="page-header-content">
             <h1>About Our Gau Seva Mission</h1>
             <p>Protecting, Nurturing, and Serving Sacred Cows</p>
@@ -46,7 +46,7 @@
                 <p>Every cow deserves dignity, love, and proper care. We rescue cows from the streets, provide medical treatment, nutritious food, and a safe home where they can live peacefully.</p>
             </div>
             <div class="about-image">
-                <img src="https://images.unsplash.com/photo-1577720643272-265f434b6b6e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Sacred Cows">
+                <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Sacred Cows">
             </div>
         </div>
     </section>
@@ -83,18 +83,30 @@
         <h2 class="section-title">What We Do</h2>
         <div class="services-grid">
             <div class="service-card">
+                <div class="service-image">
+                    <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Rescue & Shelter">
+                </div>
                 <h3>🐄 Rescue & Shelter</h3>
                 <p>We rescue abandoned and injured cows from the streets and provide them with safe shelter, clean water, and nutritious food.</p>
             </div>
             <div class="service-card">
+                <div class="service-image">
+                    <img src="https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Medical Care">
+                </div>
                 <h3>⚕️ Medical Care</h3>
                 <p>24/7 veterinary care including emergency surgeries, treatments, and rehabilitation for injured animals.</p>
             </div>
             <div class="service-card">
+                <div class="service-image">
+                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Nutrition">
+                </div>
                 <h3>🌾 Nutrition</h3>
                 <p>We provide organic, nutritious fodder and specially prepared food to ensure optimal health for all our cows.</p>
             </div>
             <div class="service-card">
+                <div class="service-image">
+                    <img src="https://images.unsplash.com/photo-1582353865267-a97f08f97cf1?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Community Education">
+                </div>
                 <h3>👥 Community Education</h3>
                 <p>We conduct awareness programs about the importance of cow protection and sustainable animal welfare.</p>
             </div>
@@ -107,22 +119,30 @@
         <p class="team-intro">Dedicated individuals working day and night for the welfare of our cows</p>
         <div class="team-grid">
             <div class="team-card">
-                <div class="team-avatar">👨‍💼</div>
+                <div class="team-image">
+                    <img src="https://images.unsplash.com/photo-1507003211169-0a1dd7228f2d?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Director">
+                </div>
                 <h3>Director</h3>
                 <p>Guiding our mission with passion and dedication</p>
             </div>
             <div class="team-card">
-                <div class="team-avatar">👩‍⚕️</div>
+                <div class="team-image">
+                    <img src="https://images.unsplash.com/photo-1438761681033-6461ffad8d80?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Veterinarian">
+                </div>
                 <h3>Veterinarian</h3>
                 <p>Providing expert medical care and treatment</p>
             </div>
             <div class="team-card">
-                <div class="team-avatar">👨‍🌾</div>
+                <div class="team-image">
+                    <img src="https://images.unsplash.com/photo-1500648767791-00dcc994a43e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Farm Manager">
+                </div>
                 <h3>Farm Manager</h3>
                 <p>Ensuring proper nutrition and farm operations</p>
             </div>
             <div class="team-card">
-                <div class="team-avatar">👩‍💻</div>
+                <div class="team-image">
+                    <img src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Community Coordinator">
+                </div>
                 <h3>Community Coordinator</h3>
                 <p>Building relationships and raising awareness</p>
             </div>
