--- a/gallery.html
+++ b/gallery.html
@@ -30,7 +30,7 @@
     </header>
 
     <!-- Page Header -->
-    <section class="page-header">
+    <section class="page-header" style="background: linear-gradient(135deg, rgba(94, 47, 13, 0.7) 0%, rgba(230, 138, 0, 0.7) 100%), url('https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80'); background-size: cover; background-position: center;">
         <div class="page-header-content">
             <h1>Our Gallery</h1>
             <p>Meet Our Sacred Cows & See Our Work</p>
@@ -44,7 +44,7 @@
             
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1577720643272-265f434b6b6e?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Sacred Cows">
+                    <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Sacred Cows">
                     <div class="gallery-overlay">
                         <h3>Our Sacred Cows</h3>
                         <p>Living peacefully in our sanctuary</p>
@@ -52,7 +52,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1516521318423-f06f70570ec0?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Veterinary Care">
+                    <img src="https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Veterinary Care">
                     <div class="gallery-overlay">
                         <h3>Medical Care</h3>
                         <p>24/7 veterinary support</p>
@@ -60,7 +60,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1560807707-cab4b1d474d0?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Fresh Food">
+                    <img src="https://images.unsplash.com/photo-1558618666-fcd25c85cd64?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Fresh Food">
                     <div class="gallery-overlay">
                         <h3>Organic Fodder</h3>
                         <p>Fresh, nutritious meals daily</p>
@@ -68,7 +68,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1577720643272-265f434b6b6e?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Rescued Cows">
+                    <img src="https://images.unsplash.com/photo-1516521318423-f06f70570ec0?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Rescued Cows">
                     <div class="gallery-overlay">
                         <h3>Rescue Stories</h3>
                         <p>From streets to sanctuary</p>
@@ -76,7 +76,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1534594121156-f4f3da13ca40?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Relaxing Cows">
+                    <img src="https://images.unsplash.com/photo-1549887534-f0e0d51c1ae5?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Relaxing Cows">
                     <div class="gallery-overlay">
                         <h3>Happy & Healthy</h3>
                         <p>Cows enjoying their sanctuary</p>
@@ -84,7 +84,7 @@
                 </div>
 
                 <div class="gallery-item">
-                    <img src="https://images.unsplash.com/photo-1577720643272-265f434b6b6e?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Community">
+                    <img src="https://images.unsplash.com/photo-1582353865267-a97f08f97cf1?ixlib=rb-4.0.3&auto=format&fit=crop&w=600&q=80" alt="Community">
                     <div class="gallery-overlay">
                         <h3>Our Community</h3>
                         <p>Volunteers dedicated to serving</p>
@@ -100,7 +100,7 @@
         <div class="stories-grid">
             <div class="story-card">
                 <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1577720643272-265f434b6b6e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Gauri">
+                    <img src="https://images.unsplash.com/photo-1564760055-f694f09a8be8?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Gauri">
                 </div>
                 <div class="story-content">
                     <h3>Gauri's Journey</h3>
@@ -112,7 +112,7 @@
 
             <div class="story-card">
                 <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1516521318423-f06f70570ec0?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Radha">
+                    <img src="https://images.unsplash.com/photo-1567427181208-d0055ad1e71e?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Radha">
                 </div>
                 <div class="story-content">
                     <h3>Radha's Recovery</h3>
@@ -124,7 +124,7 @@
 
             <div class="story-card">
                 <div class="story-image">
-                    <img src="https://images.unsplash.com/photo-1534594121156-f4f3da13ca40?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Lakshmi">
+                    <img src="https://images.unsplash.com/photo-1549887534-f0e0d51c1ae5?ixlib=rb-4.0.3&auto=format&fit=crop&w=400&q=80" alt="Lakshmi">
                 </div>
                 <div class="story-content">
                     <h3>Lakshmi's New Life</h3>
